fixed main title size and aligned inner titles to left on policy ant terms pages

--- a/app/(site)/privacy-policy/privacy.css
+++ b/app/(site)/privacy-policy/privacy.css
@@ -8,12 +8,9 @@
   h5,
   h6 {
     font-family: var(--font-montserrat);
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1;
     letter-spacing: normal;
-    text-align: center;
-    max-width: 80%;
-    margin-inline: auto;
   }
   h1 {
     font-size: 4rem; /* 40px if the base font-size is 16px */
